--- a/blog-angular/angular.json
+++ b/blog-angular/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/blog-angular/browser",
+            "outputPath": "dist/blog-angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
