--- a/life-cycle/package.json
+++ b/life-cycle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-angular",
+  "name": "life-cycle",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:blog-angular": "node dist/blog-angular/server/server.mjs"
+    "serve:ssr:life-cycle": "node dist/life-cycle/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +21,6 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.3",
-    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
